[gd_scene load_steps=3 format=2]

[ext_resource path="res://Graphics/BadBackground2.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Screens/GlobalSearch.gd" type="Script" id=2]

[node name="GlobalSearch" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="CenterContainer" parent="HBoxContainer"]
margin_right = 500.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Options"]
margin_left = 150.0
margin_top = 231.0
margin_right = 350.0
margin_bottom = 349.0
custom_constants/separation = 10

[node name="Host" type="LineEdit" parent="HBoxContainer/Options/VBoxContainer"]
margin_right = 200.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
placeholder_text = "Server Name"

[node name="Passcode" type="LineEdit" parent="HBoxContainer/Options/VBoxContainer"]
margin_top = 34.0
margin_right = 200.0
margin_bottom = 58.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
placeholder_text = "Passcode"

[node name="Connect" type="Button" parent="HBoxContainer/Options/VBoxContainer"]
margin_top = 68.0
margin_right = 200.0
margin_bottom = 118.0
rect_min_size = Vector2( 0, 50 )
text = "Connect"

[node name="Servers" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 504.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Back" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 50 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HBoxContainer/Options/VBoxContainer/Connect" to="." method="_on_Connect_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
